--- a/src/views/index.html
+++ b/src/views/index.html
@@ -18,7 +18,7 @@
     <main>
       <p class="bold">Hi.</p>
       
-      <p>I'm Malcolm. This is my server for hosting custom Twitch.tv chatbots.</p>
+      <p>This is my server for hosting custom Twitch.tv chatbots.</p>
       
       <p>For all inquiries, please reach out to me on <a href="https://github.com/snydermb">Github</a>.
     </main>
